[package]
name = "rrsort"
version = "0.1.0"
edition = "2021"
authors = ["Devyn Keeney <devyn.keeney@icloud.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
clap = { version = "4.2.1", features = ["derive"] }
indicatif = { version="0.17.3", features=["rayon"]}
itertools = "0.10.5"
nalgebra = { version="0.32.2", features=["serde-serialize"]}
rayon = "1.7.0"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
